--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ main{
     top: 80px;
 }
 
-submit_button{
+.submit_button{
     padding: 10px 30px 10px 30px;
     border-radius: 15px;
     border: 1px solid black;
@@ -680,3 +680,4 @@ footer p {
 
 
 }
+
