--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ main{
     padding: 0 1em 0 1em;
     background-image: url(./picture/bgser.avif);
 }
-}
 
 .about-us-text{
     position: absolute;
@@ -117,6 +116,7 @@ main{
     top: 30px;
     left: 6%;
     font-size: 3rem;
+    
 }
 
 .wwr{
@@ -171,6 +171,7 @@ main{
 }
 .mission p {
     line-height: 25.7px;
+    font-weight: bold;
 }
 /* SERVICES */ 
 
@@ -179,6 +180,7 @@ main{
     position: relative;
     height: 80vh;
     background-color: rgb(66, 72, 77);
+    color: white;
     /* width: 100wv; */
 }
 
@@ -187,7 +189,6 @@ main{
     left: 38.5%;
     top: 1.5rem;
     position: absolute;
-    color: rgba(198, 30, 30, 0.904);
    
     font-size: 3rem;   
 }
@@ -204,7 +205,7 @@ main{
 .signs img{
     aspect-ratio: auto 34/34;
     border-image-repeat: stretch;
-    border: 4px solid black;
+    border: 4px solid rgba(198, 30, 30, 0.1);
     border-radius: 50px;
     width: 60px;
     margin-left: 41px; 
@@ -302,7 +303,8 @@ main{
 .contact_US{
     position: absolute;
     left: 100px;
-    top: 80px;
+    top: 50px;
+    /* border: 1px solid black; */
 }
 
 .submit_button{
@@ -311,7 +313,7 @@ main{
     border: 1px solid black;
      background-color: rgb(63, 62, 62);
      color: white;
-     margin-left: 62%;
+     margin-left: 76.5%;
      margin-top: 15px;
      letter-spacing: 1.2px;
     transition: all 200ms;
@@ -336,6 +338,7 @@ main{
     margin-top: 10px;
 }
 input{
+    display: block;
     padding-right: 300px;
     height: 27px;
     padding-left: 10px;
@@ -424,7 +427,7 @@ footer p {
 }
 .line{
     position: absolute;
-    top: 40px;
+    top: 30px;
     left: 105px;
     background-color: rgba(198, 30, 30, 1);
     width: 157px;
@@ -444,11 +447,9 @@ footer p {
 #line3{
     top: 7px;
     left: 75px;
-
 }
 
-
-@media (max-width: 430px) and (max-height: 932px) {
+@media (max-width: 414px) and (max-height: 896px) {
     .HOME{
     height: 110vh;  
     }
@@ -695,12 +696,3 @@ footer p {
 
 
 }
-
-
-
-
-
-
-
-
-
