--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ main{
     top: 30px;
     left: 6%;
     font-size: 3rem;
-    
 }
 
 .wwr{
@@ -189,7 +188,7 @@ main{
     left: 38.5%;
     top: 1.5rem;
     position: absolute;
-   
+   color: white;
     font-size: 3rem;   
 }
 
@@ -205,7 +204,7 @@ main{
 .signs img{
     aspect-ratio: auto 34/34;
     border-image-repeat: stretch;
-    border: 4px solid rgba(198, 30, 30, 0.1);
+    border: 4px solid rgba(198, 30, 30, 1);
     border-radius: 50px;
     width: 60px;
     margin-left: 41px; 
@@ -224,6 +223,7 @@ main{
     font-weight: bold;
     margin-top: 1.5em;
     display: block;
+     color: white;
 }
 /* WORK */
 
@@ -696,4 +696,5 @@ footer p {
 
 
 }
+
 
